--- a/src/site/blog/posts/2024/2024-03-xx-6600-vs-s24-ultra.md
+++ b/src/site/blog/posts/2024/2024-03-xx-6600-vs-s24-ultra.md
@@ -1,5 +1,5 @@
 ---
-title: Nokia 6600 vs Samsung 24 Ultra
+title: Nokia 6600 vs Samsung S24 Ultra
 date: 2024-03-06T23:20Z
 summary: Comparing my latest smartphone to the very first one I ever owned. How things have changed over 20 years.
 keywords:
@@ -19,6 +19,7 @@ I needed a new phone and recently decided to treat myself to Samsung's latest Ga
 
 Both phones were high-end models at the time of their release. The Nokia 6600 was released in October 2003. I don't remember exactly when I got mine, but I know it was sometime during 2004. The S24 Ultra was released in January 2024, and I got mine at launch. The Samsung Galaxy S24 Ultra and Nokia 6600 are therefore about 20 years apart. An aeon in the tech world. Unsurprisingly, the new Samsung phone is vastly more powerful than the old Nokia:
 
+<div class="scrollable">
 <table>
   <caption>Nokia 6600 vs Samsung Galaxy 24 Ultra spec comparison</caption>
   <thead>
@@ -218,6 +219,7 @@ Both phones were high-end models at the time of their release. The Nokia 6600 wa
     </tr>
   </tbody>
 </table>
+</div>
 
 And yet, despite the staggering increases for some specs, there have been a few regressions too:
 
